appId: dev.sidequests.pilly
name: Start and adjust medicine supply
---
- launchApp:
    clearState: true
    clearKeychain: true
    permissions:
      notifications: allow
- openLink: 'pilly-app:///'
- runFlow: ../subflows/accept-app-link.yaml
- runFlow: ../subflows/create-medicine.yaml
- tapOn: 'Open details for Test Medicine'
- assertVisible: 'Not tracked'
- tapOn: 'Start tracking Supply'
- assertVisible: 'About 1 day left'
- tapOn: 'Increase Supply'
- assertVisible: 'About 2 days left'
- swipe:
    start: 50%, 65%
    end: 50%, 60%
    duration: 700
- tapOn: 'Back'
- tapOn: 'Medicines'
- tapOn: 'Test Medicine.*Opens medicine details.*'
- assertVisible: 'About 2 days left'
- tapOn: 'Decrease Supply'
- assertVisible: 'About 1 day left'
